# verify-goc-ledger

./: .gitignore  README.md  report.tex  todo.md
code/: git-cli.stats  pyproject.toml
code/src/verify_goc_ledger/: __init__.py
code/src/verify_goc_ledger/bench/: __init__.py  generate_benchmarks.py  run_benchmarks.py
code/src/verify_goc_ledger/common/: account.py  classes.py  datastructures.py  git_utils.py  misc.py
code/src/verify_goc_ledger/generate_repo/: git_utils.py  main.py  visualize.py
code/src/verify_goc_ledger/tests/: README.md  __init__.py  gen_testcases.py  run_testcases.py
code/src/verify_goc_ledger/verification/git_cli/: datastructures.py  test_git_cli.py
code/src/verify_goc_ledger/verification/pygit2/: test_pygit2.py
